<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2021  Ali Moukaled
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, either version 3 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
    -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepPurple100"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/grey900"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Card  -->
        <LinearLayout
            android:id="@+id/rateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/rateSymbol"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rate_card_header"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/rate"
                android:textColor="@color/grey100"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/exchangeRateTV"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/deepPurple300"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/rate"
                android:textColor="@color/green900"
                android:textSize="22sp"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/formattedFromTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/rate_card_left"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/rate"
                    android:textColor="@color/green900"
                    android:textSize="22sp"
                    app:autoSizeMaxTextSize="22sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/deepPurple200"
                    android:gravity="center"
                    android:text="@string/equal_sign"
                    android:textColor="@color/grey100"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/formattedToTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/rate_card_right"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/rate"
                    android:textColor="@color/green900"
                    android:textSize="22sp"
                    app:autoSizeMaxTextSize="22sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/errorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/convert"
            android:textColor="@color/red800"
            android:textSize="22sp"
            app:autoSizeMaxTextSize="22sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateCard" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/convertButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amountFromETHolder"
                    style="@style/TextFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/from">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amountFromET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/currencyFromSP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/currencies"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/convert_to"
                    android:textColor="@color/grey900"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/currencyToSP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/currencies"
                    android:padding="5dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/circular_button"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/bannerAd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/convertButtonTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/convertButtonPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/deepPurple200" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>